--- a/docker-proxy/caddy/subs/index_sub.html
+++ b/docker-proxy/caddy/subs/index_sub.html
@@ -97,32 +97,32 @@
 
                         function getSubscriptionId() {
               const q = new URLSearchParams(window.location.search);
-              const fromQuery = q.get(''name'');
-              const segments = window.location.pathname.replace(/\/+$/,'').split(''/'').filter(Boolean);
-              const jsonNeedle = URI_JSON_PATH.replace(/^\/|\/$/g, '''');
-              const testNeedle = URI_TEST.replace(/^\/|\/$/g, '''');
+              const fromQuery = q.get('name');
+              const segments = window.location.pathname.replace(/\/+$/,'').split('/').filter(Boolean);
+              const jsonNeedle = URI_JSON_PATH.replace(/^\/|\/$/g, '');
+              const testNeedle = URI_TEST.replace(/^\/|\/$/g, '');
               let id = null;
 
               const iJson = segments.indexOf(jsonNeedle);
-              if (iJson !== -1 && segments[iJson + 1] && segments[iJson + 1] !== ''clashmeta'') {
+              if (iJson !== -1 && segments[iJson + 1] && segments[iJson + 1] !== 'clashmeta') {
                 id = segments[iJson + 1];
               }
 
               if (!id) {
                 const iTest = segments.indexOf(testNeedle);
-                if (iTest !== -1 && segments[iTest + 1] && segments[iTest + 1] !== ''clashmeta'') {
+                if (iTest !== -1 && segments[iTest + 1] && segments[iTest + 1] !== 'clashmeta') {
                   id = segments[iTest + 1];
                 }
               }
 
               if (!id) {
-                const iClash = segments.indexOf(''clashmeta'');
+                const iClash = segments.indexOf('clashmeta');
                 if (iClash !== -1 && segments[iClash + 1]) {
                   id = segments[iClash + 1];
                 }
               }
 
-              return decodeURIComponent(id || fromQuery || ''first'');
+              return decodeURIComponent(id || fromQuery || 'first');
             }
             const username = getSubscriptionId();
 			var Base64={_keyStr:"ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789+/=",encode:function(e){var t="";var n,r,i,s,o,u,a;var f=0;e=Base64._utf8_encode(e);while(f<e.length){n=e.charCodeAt(f++);r=e.charCodeAt(f++);i=e.charCodeAt(f++);s=n>>2;o=(n&3)<<4|r>>4;u=(r&15)<<2|i>>6;a=i&63;if(isNaN(r)){u=a=64}else if(isNaN(i)){a=64}t=t+this._keyStr.charAt(s)+this._keyStr.charAt(o)+this._keyStr.charAt(u)+this._keyStr.charAt(a)}return t},decode:function(e){var t="";var n,r,i;var s,o,u,a;var f=0;e=e.replace(/[^A-Za-z0-9\+\/\=]/g,"");while(f<e.length){s=this._keyStr.indexOf(e.charAt(f++));o=this._keyStr.indexOf(e.charAt(f++));u=this._keyStr.indexOf(e.charAt(f++));a=this._keyStr.indexOf(e.charAt(f++));n=s<<2|o>>4;r=(o&15)<<4|u>>2;i=(u&3)<<6|a;t=t+String.fromCharCode(n);if(u!=64){t=t+String.fromCharCode(r)}if(a!=64){t=t+String.fromCharCode(i)}}t=Base64._utf8_decode(t);return t},_utf8_encode:function(e){e=e.replace(/\r\n/g,"\n");var t="";for(var n=0;n<e.length;n++){var r=e.charCodeAt(n);if(r<128){t+=String.fromCharCode(r)}else if(r>127&&r<2048){t+=String.fromCharCode(r>>6|192);t+=String.fromCharCode(r&63|128)}else{t+=String.fromCharCode(r>>12|224);t+=String.fromCharCode(r>>6&63|128);t+=String.fromCharCode(r&63|128)}}return t},_utf8_decode:function(e){var t="";var n=0;var r=c1=c2=0;while(n<e.length){r=e.charCodeAt(n);if(r<128){t+=String.fromCharCode(r);n++}else if(r>191&&r<224){c2=e.charCodeAt(n+1);t+=String.fromCharCode((r&31)<<6|c2&63);n+=2}else{c2=e.charCodeAt(n+1);c3=e.charCodeAt(n+2);t+=String.fromCharCode((r&15)<<12|(c2&63)<<6|c3&63);n+=3}}return t}}
@@ -130,7 +130,7 @@
 			const CANON = `https://${WEBDOMAIN}`;
 			const linkFull       = `${CANON}${URI_JSON_PATH}/${encodeURIComponent(username)}`;
 			const linkFullBase64 = `${CANON}${URI_JSON_PATH}/${encodeURIComponent(username)}`;
-			const linkFullXRAY   = SUB_JSON_PATH ? `${CANON}${SUB_JSON_PATH}/${encodeURIComponent(username)}` : '';
+			const linkFullXRAY   = SUB_JSON_PATH ? `${CANON}${SUB_JSON_PATH}/${encodeURIComponent(username)}` : linkFullBase64;
 			const linkFullClash  = `${CANON}${URI_TEST}/clashmeta/${encodeURIComponent(username)}`;
 			var qrLink = linkFull;
 			const link64 = Base64.encode(linkFullBase64);
@@ -2153,6 +2153,8 @@
 		</script>
 	</body>
 </html>
+
+
 
 
 
